# LabIsland

./: CMakeLists.txt  plan.md
include/: npc.h  t5_model.h
models/: tokenizer_config.json
scripts/: convert_t5_to_onnx.py  requirements.txt
scripts/models/: tokenizer_config.json
src/: main.cpp  npc.cpp  t5_model.cpp
